==========================
Change History for ZConfig
==========================

ZConfig 2.7.0 (unreleased)
--------------------------

- Launchpad #373614: new ``includeGlobPattern`` directive

ZConfig 2.6.1 (2008/12/05)
--------------------------

- Fixed support for schema descriptions that override descriptions from a base
  schema.  If multiple base schema provide descriptions but the derived schema
  does not, the first base mentioned that provides a description wins.
  https://bugs.launchpad.net/zconfig/+bug/259475

- Fixed compatibility bug with Python 2.5.0.

- No longer trigger deprecation warnings under Python 2.6.


ZConfig 2.6.0 (2008/09/03)
--------------------------

- Added support for file rotation by time by specifying when and
  interval, rather than max-size, for log files. 

- Removed dependency on setuptools from the setup.py.


ZConfig 2.5.1 (2007/12/24)
--------------------------

- Made it possible to run unit tests via 'python setup.py test' (requires
  setuptools on sys.path).

- Added better error messages to test failure assertions.

ZConfig 2.5 (31 Aug 2007)
-------------------------

  *A note on the version number:*

  Information discovered in the revision control system suggests that
  some past revision has been called "2.4", though it is not clear that
  any actual release was made with that version number.  We're going to
  skip revision 2.4 entirely to avoid potential issues with anyone using
  something claiming to be ZConfig 2.4, and go straight to version 2.5.

- Add support for importing schema components from ZIP archives (including
  eggs).

- Added a 'formatter' configuration option in the logging handler sections
  to allow specifying a constructor for the formatter.

- Documented the package: URL scheme that can be used in extending schema.

- Added support for reopening all log files opened via configurations using
  the ZConfig.components.logger package.  For Zope, this is usable via the