@@ -7,6 +7,8 @@ ZConfig 2.7.0 (unreleased)
 
 - Launchpad #373614: new ``includeGlobPattern`` directive
 
+- Launchpad #373609: added support for function interpolation
+
 ZConfig 2.6.1 (2008/12/05)
 --------------------------
 
